L6/Web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: homework
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 8000
